@@ -34,7 +34,6 @@ public interface LogicMainJava extends FullLogicMain<JavaProgram> {
   default JavaProgram codeGeneration(
           MIR.Program mir
   ){
-    var c= new JavaCompiler(verbosity(),io());
     var res= new JavaProgram(this,mir);
 
     if (verbosity().printCodegen()) {
@@ -42,10 +41,14 @@ public interface LogicMainJava extends FullLogicMain<JavaProgram> {
       res.writeJavaFiles(tmp);
       System.out.println("saved to "+tmp);
     }
-
-    c.compile(res.files());
     return res;
   }
+
+  @Override default void compileBackEnd(JavaProgram src) {
+    var c= new JavaCompiler(verbosity(),io());
+    c.compile(src.files());
+  }
+
   default ProcessBuilder execution(
           MIR.Program program,
           JavaProgram exe,
@@ -80,7 +83,7 @@ class MakeJavaProcess{
             + File.pathSeparator
             + io.cachedBase().toAbsolutePath();
     var baseCommand = Stream.of(
-            jrePath, "-cp", classpath, entryPoint, io.entry());
+            jrePath, "-cp", classpath, "--enable-preview", entryPoint, io.entry());
     return Stream.concat(baseCommand,
                     io.commandLineArguments().stream())
             .toArray(String[]::new);
